--- a/index.html
+++ b/index.html
@@ -9,15 +9,23 @@
 </head>
 <body>
     <p class="letras">Carrossel</p>
-    <div class="carrossel">
-        <div class="fotos">
-            <img src="img/1.jpg">
-            <img src="img/2.jpg">
-            <img src="img/3.jpg">
-            <img src="img/7.jpg">
-            <img src="img/1.jpg">
-            
+    <center>
+        <div class="carrossel">
+            <div class="fotos">
+                <img src="img/1.jpg" class="lovely">
+                <img src="img/2.jpg" class="lovely">
+                <img src="img/3.jpg" class="lovely">
+                <img src="img/4.jpg" class="lovely">
+                <img src="img/5.jpg" class="lovely">
+                <img src="img/6.jpg" class="lovely">
+                <img src="img/7.jpg" class="lovely">
+                <img src="img/8.jpg" class="lovely">
+                <img src="img/9.jpg" class="lovely">
+                <img src="img/10.jpg" class="lovely">
+                <img src="img/1.jpg" class="lovely">
+                
+            </div>
         </div>
-    </div>
+    </center>
 </body>
 </html>
